Making final changes

--- a/src/components/ProductList/style.css
+++ b/src/components/ProductList/style.css
@@ -2,3 +2,15 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
+
+.checkout-btn {
+    padding: 10px 30px;
+    border-radius: 0.3em;
+    font-size: 1.4em;
+    font-weight: bold;
+    background: #333536;
+    color: #fff;
+    box-shadow: 0 3px 0 rgba(59,154,198, 0);
+    position: absolute;
+    left: 40%;
+}
