--- a/src/components/Product/style.css
+++ b/src/components/Product/style.css
@@ -5,3 +5,24 @@ img {
     width: 400px;
     height: 400px;
 }
+
+.delete-btn {
+    padding: 10px 30px;
+    border-radius: 0.3em;
+    font-size: 1.4em;
+    font-weight: bold;
+    background: #d34e4e;
+    color: #fff;
+    box-shadow: 0 3px 0 rgba(59,154,198, 0)
+}
+
+.spacing {
+    padding: 10px 30px;
+}
+
+.count {
+    font-size: 20px;
+    font-family: ‘Open Sans’;
+    font-weight: 900;
+    color: #202020;
+}
